--- a/index.html
+++ b/index.html
@@ -28,3 +28,14 @@
         <link rel="stylesheet" href="./assets/css/style.css" />
 
     </head>
+
+<body>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+
+</body>
+
+</html>
