pushing the files

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     </head>
 
 <body>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+    <!-- main header -->
+    <header class="container-fluid text-center text-white p-3">
+        <h1>Weather Works</h1>
+        </header>
+        <!-- /main header -->
 
 </body>
 
