pushing the updates

--- a/index.html
+++ b/index.html
@@ -31,10 +31,18 @@
 
 <body>
     <!-- main header -->
-    <header class="container-fluid text-center text-white p-3">
+    <header>
         <h1>Weather Works</h1>
         </header>
         <!-- /main header -->
+
+    <div>
+        <div>
+            <section>
+                
+            </section>
+        </div>
+    </div>
 
 </body>
 
