psuhing the updated files

--- a/index.html
+++ b/index.html
@@ -65,6 +65,18 @@
                                 </button>
                             </div>
                 </form>
+
+                <div class="text-center mt-3 border-bottom border-primary">
+
+                            <button
+                                class="btn btn-primary m-2 mb-4"
+                                type="button"
+                                id="clear-history-button"
+                            >
+                                Clear search history
+                            </button>
+
+                        </div>
             </section>
         </div>
     </div>
