pushing the updates

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <!-- for google fonts -->
         <link
         href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Raleway&display=swap"
         rel="stylesheet"
